<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.">>


    <item

        android:id="@+id/mt_back"
        android:icon="@drawable/ic_baseline_back_24"
        android:title="@string/mi_voltar"
        app:showAsAction="always"></item>
    <item
        android:id="@+id/mt_done"
        android:icon="@drawable/ic_baseline_done_24"
        android:title="@string/mi_pronto"
        app:showAsAction="always" />
    <item
        android:id="@+id/mt_share"
        android:icon="@drawable/ic_baseline_share_24"
        android:title="@string/mi_share"
        app:showAsAction="always"></item>
    <item
        android:id="@+id/mt_delete"
        android:icon="@drawable/ic_baseline_delete_24"
        android:title="@string/mi_delete"
        app:showAsAction="always" />
</menu>