<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewNote">

    <Button
        android:id="@+id/btn_pronto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_pronto"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="679dp" />

    <Button
        android:id="@+id/btn_cancelar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancel"
        tools:layout_editor_absoluteX="251dp"
        tools:layout_editor_absoluteY="691dp" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:constraint_referenced_ids="btn_pronto,btn_cancelar"
        app:flow_horizontalStyle="spread_inside"
        app:flow_wrapMode="chain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txt_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/design_default_color_on_primary"
        android:ems="10"
        android:hint="@string/hint_titulo"
        android:inputType="textMultiLine|text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_description"
        style="@android:style/Widget.AutoCompleteTextView"
        android:layout_width="395dp"
        android:layout_height="213dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/design_default_color_on_primary"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/hint_texto"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title" />

</androidx.constraintlayout.widget.ConstraintLayout>